...
                    text = note.content, modifier = Modifier.align(CenterStart)
                        .testTag("NoteCard"),
                    color = if (note.isDone) Color.Gray else Color.White
                )
            }
        }
        Checkbox(modifier = Modifier.testTag("Checkbox"),
            checked = note.isDone, onCheckedChange = { newValue ->
            onCheckedChange(note.id, newValue)
        })
    }
}

